--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ cyan:  #00FFFF
 font: https://fonts.google.com/download?family=Karla
 */
 html {
-    box-sixing: border-box;
+    box-sizing: border-box;
     font-family: 'Karla';
     font-size: 16px;
   }
@@ -51,7 +51,7 @@ html {
     vertical-align: top;
     margin: 0;
     display: inline-block;
-     width: 43%;
+     width: 50%;
     height: 100%;
   padding: 20px;
   }
@@ -60,7 +60,7 @@ html {
     background-color: #2ebfbd;
     verticl-aline: top;
     display: inline-block; 
-    width: 43%;
+    width: 50%;
     height: 100%;
   padding: 20px;
     
