--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ html {
     padding: 20px;
   }
   #card {
-    width: 600px;
-    height: 400px;
+  
    box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.35);
     border-radius: 5px;
     overflow: hidden;
@@ -51,7 +50,7 @@ html {
     vertical-align: top;
     margin: 0;
     display: inline-block;
-     width: 50%;
+    width: 100%;
     height: 100%;
   padding: 20px;
   }
@@ -60,7 +59,8 @@ html {
     background-color: #2ebfbd;
     verticl-aline: top;
     display: inline-block; 
-    width: 50%;
+    /* width: 50%; */
+    width: 100%;
     height: 100%;
   padding: 20px;
     
@@ -128,4 +128,15 @@ html {
     color: black;
     transform: scale(1.1);
   }
+  
+@media (min-width: 576px) {
+  
+  #card {
+    width: 550px;
+    height: 400px; 
+  }
+  #bottom-left-section, #bottom-right-section {
+    width: 50%;
+  }   
+}
   
